# C-object-oriented

./: CMakeLists.txt  README.md  build.bat  main.c
include/: child_class.h  class.h  config.h  inline.h  polymorphic.h
package/: CMakeLists.txt  README.md  build.bat  main.c
package/components/: CMakeLists.txt
package/components/class/: CMakeLists.txt  class.c
package/components/class/include/: class.h
package/include/: main.h
src/: child_class.c  class.c  polymorphic.c
verify/: verify.c
